--- a/activities/Engagementolul.html
+++ b/activities/Engagementolul.html
@@ -23,7 +23,7 @@
     <dt>Jollibee</dt>
     <dd>They have spicie chicken which makes me feel the chicken fry I used to eat in India</dd>
 </dl>
- <p> <mark>amet consectetur</mark> Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nam, nobis ad modi asperiores recusandae corporis magni, itaque distinctio unde dolorem ducimus minima velit saepe, expedita sapiente id autem illum. </p></body><h2>Where can you find the lecture notes?</h2>
+ <p> <mark>Amet consectetur</mark> Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nam, nobis ad modi asperiores recusandae corporis magni, itaque distinctio unde dolorem ducimus minima velit saepe, expedita sapiente id autem illum. </p></body><h2>Where can you find the lecture notes?</h2>
 <p>Home tab, under the introduction section</p>
 <h3>When is your project due?</h3>
 <p>On the canvas it shouws 11:59pm but the due time is till 5 am next day.</p>
