--- a/activities/olul.html
+++ b/activities/olul.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OLUL</title>
+    <title>AmmonOLUL</title>
 </head>
 <body>
     <h1>My favorite food</h1>
