--- a/activities/Engagementolul.html
+++ b/activities/Engagementolul.html
@@ -29,7 +29,7 @@
 <p>On the canvas it shouws 11:59pm but the due time is till 5 am next day.</p>
 <h4>What are special entity characters?</h4>
 <p>Codes in HTML to show special symbols. </p>
-<p>&copy;</p>
+
 <h5>What are phrase tags?</h5>
 <p>HTML tags that give meaning to words. 
     <em>shows important words</em>
@@ -41,5 +41,7 @@
  UL = list with bullets (•)</p>
 <h2>What is a DL?</h2>
 <p>DL = description, shows a term and its meaning.</p>
+<p>&copy; Ammon Nulu</p>
 
+</body>
 </html>
