--- a/projects/Hero.html
+++ b/projects/Hero.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>My Hero Jimmy George</h2>
-    <a href="jimmygeorge.css">Hero</a>
+    <a href="Hero.html">Hero</a>
     <a href="Vollyball.html">Interest</a>
     <p>Jimmy George is a very famous volleyball player from India. He inspired me with his amazing skills and hard work. I like how he always tried his best in every game. Some parts of his life are less known, but he is still a great example for young players like me.</p>
         <h3>Hometown</h3>
