--- a/projects/Vollyball.html
+++ b/projects/Vollyball.html
@@ -12,11 +12,11 @@
     </header>
     <main>
         <a href="Vollyball.html">Interest</a>
-        <a href="jimmygeorge.css">Hero</a>
+        <a href="Hero.html">Hero</a>
         <p>I like playing volleyball very much. It is fun and keeps me active. I also like watching volleyball matches on TV. Volleyball teaches teamwork and helps me stay healthy.</p>
         <p>I used to wake up at 4 a.m. every day. I would go for running and do fitness training. After that, I practiced my game. I also used to take part in many tournaments.</p>
         <a href="Vollyball.html">Interest</a> is the example of relative link of my Interest page.
-        <a href="jimmygeorge.css">Hero</a> is a example of absolute link of my hero page.
+        <a href="Hero.html">Hero</a> is a example of absolute link of my hero page.
         <H2>Questions and Answers:</H2>
         <h3>What color did you choose to emphasize text?</h3>
         <p>I used the crimson class to make text stand out</p>
