--- a/projects/pagelayout.html
+++ b/projects/pagelayout.html
@@ -12,10 +12,10 @@
             <h1>Kashmir Snow Mountains</h1>
         </header>
         <nav>
-            <a href="#">link</a>
-            <a href="#">link</a>
-            <a href="#">link</a>
-            <a href="#">link</a>
+            <a href="#">Snow</a>
+            <a href="#">Chill</a>
+            <a href="#">Heaven</a>
+            <a href="#">Trees</a>
         </nav>
         <main>
             <figure class="Kashmir">
@@ -26,9 +26,10 @@
             <p>The snowy mountains are not only beautiful but also important for the people living there. Many local families earn their living through tourism and feel happy to welcome visitors. Whether you like adventure or calm nature, Kashmir snowy hills always stay in your heart.
             </p>
         </main>
-    </div>
     <footer>
-        <p>&copy; 2025 Ammon Nulu</p>
+        <p>&copy; 2025 Ammon Nulu This a beautiful place called Kashmir, India.</p>
     </footer>
+    </div>
+    
 </body>
 </html>
