--- a/activities/flex.html
+++ b/activities/flex.html
@@ -27,7 +27,10 @@
             <div class="card">
                 <p>Picture and a H2 and text</p>
             </div>
-        </div>    
+        </div>   
+        <h2>What you learned about Flex and CSS.</h2> 
+        <p>Flexbox helps to arrange items in a line and makes the layout flexible.
+        CSS makes the page look better by adding borders, shadows, and nice fonts.</p>
     </main>
     <footer>
         <p>&copy; 2025 Ammon Nulu</p>
