--- a/activities/responsivepageforprint.html
+++ b/activities/responsivepageforprint.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Page</title>
-    <link rel="stylesheet" href="responsivepageforprint.css">
+    <link rel="stylesheet" href="responsivepageforprint.css" media="screen">
     <link rel="stylesheet" href="print.css" media="print">
 </head>
 <body>
@@ -26,12 +26,12 @@
             <div class="row">
                 <article class="card">
                     <img src="BYUH.jpeg" alt="Front enterence of BYUH">
-                    <h3>BYUH Hawaii Reconstruction</h3>
+                    <h3>TVA Reconstruction</h3>
                     <p>ongoing process of Reconstruction</p>
                     <a href="#">more info</a>
                 </article>
-                <article class="card"> <img src="BYUH.jpeg" alt="Front enterence of BYUH">
-                    <h3>BYUH Hawaii Reconstruction</h3>
+                <article class="card main-card"> <img src="BYUH.jpeg" alt="Front enterence of BYUH">
+                    <h3>McKay Reconstruction</h3>
                     <p>ongoing process of Reconstruction</p>
                     <a href="#">more info</a></article>
                 <article class="card"> <img src="BYUH.jpeg" alt="Front enterence of BYUH">
