--- a/projects/myfamilyresponsivepage.html
+++ b/projects/myfamilyresponsivepage.html
@@ -31,23 +31,28 @@
                 <li>Shizuka, Gian, and Suneo are Nobita's close friends.</li>
             </ul>
         </div>
-        </aside>
         <main>
             <article>
+                <h3>Nobisuke</h3>
                 <img src="Nobisuke.jpeg" alt="Nobisuke Nobi">
-                <figcaption>Nobisuke Nobi - Nobita's kind father</figcaption>
+                <p>Nobisuke Nobi Nobitas kind father</p>
                 <p>Nobisuke is Nobita's dad. He works hard every day in the office to take care of his family. 
-                He likes to read the newspaper and watch TV after work. Nobisuke is friendly and patient, and he often tells Nobita to keep trying and never give up.</p>
+                   He likes to read the newspaper and watch TV after work. Nobisuke is friendly and patient, and he often tells Nobita to keep trying and never give up.</p>
             </article>
             <article>
+                <h3>Tamako</h3>
                 <img src="Tamako.jpeg" alt="Tamako Nobi">
-                <figcaption>Tamako Nobi - Nobita's caring mother</figcaption>
-                <p>Tamako is Nobita's mom. She cooks, cleans, and takes care of the whole family. She sometimes shouts at Nobita when he is lazy, but she truly loves him. Tamako always wants Nobita to study well and grow up to be a good and kind person.</p>
+                <p>Tamako Nobi - Nobita's caring mother</p>
+                <p>Tamako is Nobita's mom. She cooks, cleans, and takes care of the whole family. 
+                    She sometimes shouts at Nobita when he is lazy, but she truly loves him. 
+                    Tamako always wants Nobita to study well and grow up to be a good and kind person.</p>
             </article>
             <article>
+                <h3>Nobita</h3>
                 <img src="Nobita.jpg" alt="Nobita Nobi">
-                <figcaption>Nobita Nobi - The funny boy</figcaption>
-                <p>Nobita is a sweet and funny boy who likes to play more than study. He often gets into trouble because he forgets to do his homework. Even when things go wrong, Nobita has a good heart and always tries to help his friends. With Doraemon's help, he learns to be brave and do better each day.</p>
+                <p>Nobita Nobi - The funny boy</p>
+                <p>Nobita is a sweet and funny boy who likes to play more than study. 
+                   He often gets into trouble because  he forgets to do his homework. Even when things go wrong, Nobita has a good heart and always tries to help his friends. With Doraemon's help, he learns to be brave and do better each day.</p>
             </article>
         </main>
     </div>
