--- a/Naga/nagaprofitilo.html
+++ b/Naga/nagaprofitilo.html
@@ -96,7 +96,7 @@
           <ul>
             <li>Ensured fire life safety compliance, conducted fire extinguisher inspections, hydrant checks, and emergency drills.</li>
             <li>Coordinated campus event safety and supported OSHA standard implementation.</li>
-            <li>Conducted trainings on fire extinguisher use, first aid, and emergency response.</li>
+            <li>Conducted trainings on fire extinguisher use, first aid, and emergency responses.</li>
             <li>Managed budgets and team coordination for departmental operations.</li>
           </ul>
         </article>
