--- a/activities/formengagement.html
+++ b/activities/formengagement.html
@@ -14,8 +14,8 @@
         <h1>Forms</h1>
         <form action="formprocess.html" method="post">
             <div>
-                <label for="Full Name">Full Name:</label>
-                <input type="Full Name" name="fname" id="full-name">
+                <label for="full name">Full Name:</label>
+                <input type="full name" name="fname" id="full-name">
             </div>
             <div>
                 <label for="Email">Email:</label>
@@ -23,7 +23,7 @@
             </div>
             <div>
                 <label for="pass">Password:</label>
-                <input type="Pasword" name="pass" id="pass">
+                <input type="Password" name="pass" id="pass">
             </div>
             <div>
                 <label for="state">State:</label>
