--- a/activities/formengagement.html
+++ b/activities/formengagement.html
@@ -13,40 +13,44 @@
     <main>
         <h1>Forms</h1>
         <form action="formprocess.html" method="post">
-            <div>
-                <label for="full name">Full Name:</label>
-                <input type="full name" name="fname" id="full-name">
-            </div>
-            <div>
-                <label for="Email">Email:</label>
-                <input type="Email" name="Email" id="Email">
-            </div>
-            <div>
-                <label for="pass">Password:</label>
-                <input type="Password" name="pass" id="pass">
-            </div>
-            <div>
-                <label for="state">State:</label>
-                <select name="state" id="state">
-                    <option value="blank">---</option>
-                    <option value="CA">Califonia</option>
-                    <option value="HI">Hawaii</option>
-                    <option value="UT">Utah</option>
-                </select>
-            </div>
-            <div>
-                <label><input type="checkbox" name="agree">I agree to the terms.</label>
-            </div>
-            <div>
-                gender:
-                <label><input type="radio" name="Gender" value="male">Male</label>
-                <label><input type="radio" name="Gender" value="male">Female</label>
-            </div>
-            <div>
-                <label for="comments">Comments</label>
-                <textarea name="comments" id="comments"></textarea>
-            </div>
-           <input type="submit" value="Sign Up">
+            <fieldset>
+                <div class="form-row">
+                    <label for="fname">Full Name:</label>
+                    <input type="text" name="fullname" id="fname">
+                </div>
+                <div class="form-row">
+                    <label for="Email">Email:</label>
+                    <input type="Email" name="Email" id="Email">
+                </div>
+                <div class="form-row">
+                    <label for="pass">Password:</label>
+                    <input type="Password" name="pass" id="pass">
+                </div>
+                <div class="form-row">
+                    <label for="state">State:</label>
+                    <select name="state" id="state">
+                        <option value="blank">---</option>
+                        <option value="CA">Califonia</option>
+                        <option value="HI">Hawaii</option>
+                        <option value="UT">Utah</option>
+                    </select>
+                </div>
+                <div class="check-row">
+                    <div class="spacer"></div>
+                    <label><input type="checkbox" checked>I agree to the terms.</label>
+                </div>
+                <div class="check-row">
+                    <div class="spacer">gender:</div>
+                    <label><input type="radio" name="Gender" value="male">Male</label>
+                    <label><input type="radio" name="Gender" value="male">Female</label>
+                </div>
+                <div class="form-row">
+                    <label for="comments">Comments:</label>
+                    <textarea name="comment" id="comment"></textarea>
+                </div class="form-row">
+                    <div class="spacer"></div>
+                    <input type="submit" value="Sign Up">
+           </fieldset>
         </form>
     </main>
     <footer>
