--- a/activities/formengagement.html
+++ b/activities/formengagement.html
@@ -53,14 +53,10 @@
            </fieldset>
         </form>
     </main>
-    <h3>What is JavaScript? How did it get its name?</h3>
-        <p>JavaScript is a language that makes websites interactive, and it got its name because Netscape used the popular “Java” name for marketing.</p>
-        <h3>What are the two ways you can run JavaScript?</h3>
-        <p>You can run JavaScript in a web browser or on a server using Node.js.</p>
-        <h3>What was the most popular front-end js library?</h3>
-        <p>Earlier, the most popular front-end JavaScript library was jQuery.</p>
-        <h3>What is the most popular front-end js library today?</h3>
-        <p>Today, the most popular front-end JavaScript library is React.</p>
+        <h3>What is AJAX?</h3>
+        <p>AJAX is a method that lets a webpage send or receive information from the server without refreshing the whole page. It makes the website work faster and feel smoother because only small parts of the page change instead of loading everything again.</p>
+        <h3>Why do you put your JS Code in a separate file?</h3>
+        <p>We put JavaScript in a separate file to keep our HTML neat and clean. It is easier to read, easier to fix, and we can use the same JS file on many pages. The website also loads faster because the browser saves the file. This is the normal and professional way of writing web code.</p>
     <footer>
         <p>&copy; 2025 Ammon Nulu</p>
     </footer>
