--- a/finalproposal/biriyani.html
+++ b/finalproposal/biriyani.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biriyani</title>
+    <title>Biryani</title>
     <link rel="stylesheet" href="finalupdate.css">
 </head>
 <body>
@@ -16,6 +16,7 @@
                 <li><a href="biriyani.html" class="active">Biryani</a></li>
                 <li><a href="chaicoffee.html">Chai & Coffee</a></li>
                 <li><a href="spices.html">Spices</a></li>
+                <li><a href="video.html">Video</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -23,16 +24,24 @@
     <main>
         <section>
             <h2>South Indian Biryani</h2>
-            <p>Biryani is a fragrant rice dish with meat or vegetables, cooked with spices and herbs. South India has different varieties:</p>
+            <p>Biryani is a fragrant rice dish cooked with meat or vegetables. South Indian variations include:</p>
+
             <ul>
-                <li>Hyderabadi Biryani - rich, spicy, often served with yogurt</li>
-                <li>Kerala Biryani - uses coconut and local spices</li>
-                <li>Andhra Biryani - very spicy and flavorful</li>
-                <li>Tamil Nadu Biryani - lighter spices, fragrant rice</li>
+                <li>Hyderabadi Biryani</li>
+                <li>Kerala Biryani</li>
+                <li>Andhra Biryani</li>
+                <li>Tamil Nadu Biryani</li>
             </ul>
+
+            <img src="Biriyani.jpg" alt="Biryani">
         </section>
-        <img src="Biriyani.jpg" alt="Biryani Image">
     </main>
+    <p>
+        Source link for Biriyani:  
+        <a href="https://www.timeout.com/austin/restaurants/best-indian-restaurants-in-austin" target="_blank">
+            Click here to view Biriyani Image
+        </a>
+    </p>
     <footer>
         <p>&copy; 2025 Ammon Nulu</p>
     </footer>
