--- a/finalproposal/chaicoffee.html
+++ b/finalproposal/chaicoffee.html
@@ -16,6 +16,7 @@
                 <li><a href="biriyani.html">Biryani</a></li>
                 <li><a href="chaicoffee.html" class="active">Chai & Coffee</a></li>
                 <li><a href="spices.html">Spices</a></li>
+                <li><a href="video.html">Video</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -23,13 +24,26 @@
     <main>
         <section>
             <h2>Chai</h2>
-            <p>Chai (tea) is a daily staple in South India. It is made by boiling tea leaves with milk, water, and spices like cardamom and ginger. Chai is often enjoyed with snacks in the evening.</p>
-            <img src="Chai.jpg" alt="Chai Image">
+            <p>Chai is made by boiling tea leaves with milk, water, and spices. It is a daily drink in South India.</p>
+            <img src="Chai.jpg" alt="Chai">
+
             <h2>Filter Coffee</h2>
-            <p>South Indian filter coffee is a strong, aromatic coffee served with milk and sugar. It is an important part of daily life and cultural gatherings.</p>
-            <img src="Coffee.jpg" alt="Filter Coffee Image">
+            <p>South Indian filter coffee is strong, aromatic, and made using a traditional metal filter.</p>
+            <img src="Coffee.jpg" alt="Filter Coffee">
         </section>
     </main>
+    <p>
+        Source link for Chai:  
+        <a href="https://www.facebook.com/photo.php?fbid=1064597502348722&id=100063954465672&set=a.477259511082527 " target="_blank">
+            Click here to view Chai Image
+        </a>
+    </p>
+    <p>
+        Source link for Coffee:  
+        <a href="https://maduraimes.com/austin/product/filter-coffee/" target="_blank">
+            Click here to view Coffee Image
+        </a>
+    </p>
     <footer>
         <p>&copy; 2025 Ammon Nulu</p>
     </footer>
