--- a/finalproposal/dosaidli.html
+++ b/finalproposal/dosaidli.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dosa & Idly</title>
+    <title>Dosa & Idli</title>
     <link rel="stylesheet" href="finalupdate.css">
 </head>
 <body>
+
     <header>
         <h1>South Indian Food Culture</h1>
         <nav>
@@ -16,20 +17,35 @@
                 <li><a href="biriyani.html">Biryani</a></li>
                 <li><a href="chaicoffee.html">Chai & Coffee</a></li>
                 <li><a href="spices.html">Spices</a></li>
+                <li><a href="video.html">Video</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <main> 
+
+    <main>
         <section>
             <h2>Dosa</h2>
-            <p>Dosa is a thin, crispy pancake made from fermented rice and lentil batter. It is commonly eaten for breakfast or dinner. Popular varieties include plain dosa, masala dosa, rava dosa, and paper dosa.</p>
-            <img src="Dosa.jpg" alt="Dosa Image">
+            <p>Dosa is a thin, crispy pancake made from fermented rice and lentil batter. Popular varieties include masala dosa, rava dosa, and paper dosa.</p>
+            <img src="Dosa.jpg" alt="Dosa">
+
             <h2>Idli</h2>
-            <p>Idli is a soft, steamed cake made from fermented rice and lentil batter. It is light and healthy, usually served with chutney and sambar. Varieties include rava idli, mini idli, and idli upma.</p>
-            <img src="Idly.jpg" alt="Idli Image">
+            <p>Idli is a soft, steamed cake made from fermented batter. It is light and healthy, usually served with chutney and sambar.</p>
+            <img src="Idly.jpg" alt="Idli">
         </section>
     </main>
+    <p>
+        Source link for Dosa:  
+        <a href="https://share.google/images/3jHprZRMryR9fBQSi" target="_blank">
+            Click here to view Dosa Image
+        </a>
+    </p>
+    <p>
+        Source link for Idly:  
+        <a href="https://share.google/images/017Jq1MkuXSSbIhCS" target="_blank">
+            Click here to view Idly Image
+        </a>
+    </p>
     <footer>
         <p>&copy; 2025 Ammon Nulu</p>
     </footer>
