--- a/finalproposal/home.html
+++ b/finalproposal/home.html
@@ -16,6 +16,7 @@
                 <li><a href="biriyani.html">Biryani</a></li>
                 <li><a href="chaicoffee.html">Chai & Coffee</a></li>
                 <li><a href="spices.html">Spices</a></li>
+                <li><a href="video.html">Video</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -24,13 +25,18 @@
         <section>
             <h2>Welcome to South Indian Food</h2>
             <p>South India has a rich food culture known for its flavors, spices, and unique dishes. From breakfast favorites like dosa and idli to biryani and aromatic chai and filter coffee, our cuisine is a delightful experience.</p>
-            <img src="South Indian Foods.jpg" alt="Dosa Image">
+            <img src="SouthIndianFoods.jpg" alt="South Indian Foods">
             <p>Explore the pages to learn about the history, types, and cultural significance of these foods and the spices that make them unique.</p>
         </section>
     </main>
+    <p>
+        Source link for South Indian Foods:  
+        <a href="https://share.google/images/x2h57HETO0N4u6hT6" target="_blank">
+            Click here to view South Indian Foods Image
+        </a>
+    </p>
     <footer>
-    <p>&copy; 2025 Ammon Nulu</p>
+        <p>&copy; 2025 Ammon Nulu</p>
     </footer>
-    <script src="js/script.js"></script>
 </body>
 </html>
