--- a/finalproposal/spices.html
+++ b/finalproposal/spices.html
@@ -16,6 +16,7 @@
                 <li><a href="biriyani.html">Biryani</a></li>
                 <li><a href="chaicoffee.html">Chai & Coffee</a></li>
                 <li><a href="spices.html" class="active">Spices</a></li>
+                <li><a href="video.html">Video</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -23,10 +24,9 @@
     <main>
         <section>
             <h2>South Indian Spices</h2>
-            <img src="Spices.jpg" alt="Spices of South Indian">
-            <p>South Indian food uses a variety of spices to enhance flavor and aroma. Here are some common spices and their uses:</p>
+            <img src="Spices.jpg" alt="South Indian Spices">
+            <p>South Indian food uses many spices to enhance aroma and flavor. Common spices include:</p>
             <table>
-                <caption>Common South Indian Spices and Their Uses</caption>
                 <thead>
                     <tr>
                         <th>Spice</th>
@@ -35,35 +35,45 @@
                         <th>Health Benefits</th>
                     </tr>
                 </thead>
+
                 <tbody>
                     <tr>
                         <td>Cardamom</td>
                         <td>Sweet, aromatic</td>
                         <td>Chai, desserts, biryani</td>
-                        <td>Aids digestion, antioxidant</td>
+                        <td>Aids digestion</td>
                     </tr>
+
                     <tr>
                         <td>Cumin</td>
                         <td>Earthy, warm</td>
-                        <td>Sambar, rice dishes, curry</td>
-                        <td>Improves digestion</td>
+                        <td>Sambar, curries</td>
+                        <td>Helps digestion</td>
                     </tr>
+
                     <tr>
                         <td>Mustard Seeds</td>
                         <td>Nutty, pungent</td>
-                        <td>Sambar, curries, pickles</td>
-                        <td>Rich in iron, anti-inflammatory</td>
+                        <td>Sambar, pickles</td>
+                        <td>Anti-inflammatory</td>
                     </tr>
+
                     <tr>
                         <td>Turmeric</td>
                         <td>Warm, bitter</td>
                         <td>Curries, biryani</td>
-                        <td>Anti-inflammatory, antioxidant</td>
+                        <td>Antioxidant</td>
                     </tr>
                 </tbody>
             </table>
         </section>
     </main>
+    <p>
+        Source link for Spices:  
+        <a href="https://share.google/images/f8WP2Gt71OmfjE5F4" target="_blank">
+            Click here to view Spices Image
+        </a>
+    </p>
     <footer>
         <p>&copy; 2025 Ammon Nulu</p>
     </footer>
