--- a/finalproposal/contact.html
+++ b/finalproposal/contact.html
@@ -16,37 +16,42 @@
                 <li><a href="biriyani.html">Biryani</a></li>
                 <li><a href="chaicoffee.html">Chai & Coffee</a></li>
                 <li><a href="spices.html">Spices</a></li>
+                <li><a href="video.html">Video</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-        <h2>Contact Us</h2>
-        <form id="contactForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" required>
+            <h2>Contact Us</h2>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" required>
+            <form id="contactForm">
+                <label>Name:</label>
+                <input type="text" id="name" required>
 
-            <label for="dish">Favourite Dish:</label>
-            <input type="text" id="dish">
+                <label>Email:</label>
+                <input type="email" id="email" required>
 
-            <label for="suggestion">Recipe Suggestion:</label>
-            <textarea id="suggestion" rows="4"></textarea>
+                <label>Favourite Dish:</label>
+                <input type="text" id="dish">
 
-            <label for="rating">Rating (1-5):</label>
-            <input type="number" id="rating" min="1" max="5">
+                <label>Recipe Suggestion:</label>
+                <textarea id="suggestion" rows="4"></textarea>
 
-            <button type="submit">Submit</button>
-        </form>
-        <p id="successMessage" style="display:none; color:blue; font-weight:bold;">Thank you! Your form has been submitted successfully.</p>
+                <label>Rating (1–5):</label>
+                <input type="number" id="rating" min="1" max="5">
+
+                <button type="submit">Submit</button>
+            </form>
+
+            <p id="successMessage" style="display:none; color:blue; font-weight:bold;">
+                Thank you! Your form has been submitted successfully.
+            </p>
         </section>
     </main>
     <footer>
         <p>&copy; 2025 Ammon Nulu</p>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
